Using the Path.of API instead of Paths.get.