@@ -1,7 +1,6 @@
 package common;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class Util
 {
@@ -10,7 +9,7 @@ public class Util
         StackTraceElement[] stackTraceElements = Thread.currentThread().getStackTrace();
         String className = stackTraceElements[ stackTraceElements.length - 1].getClassName();
         String[] split = className.split("\\.");
-        return Paths.get("src", "main", "resources",
+        return Path.of("src", "main", "resources",
                 split[split.length-2],
                 split[split.length-1].toLowerCase() + ".txt");
     }
